# roborally

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  lerna.json  package.json
.gitpod/: Dockerfile
.theia/: settings.json
backend/: Cargo.toml  build.rs
backend-ts-client-lib/: generate-proto.sh  package.json  tsconfig.json
backend/data/boards/: empty-5x5.brd  test-conveyor-deaths.brd  test-conveyor-moves.brd  test-full-1.brd  test-rotator.brd  test1.brd
backend/proto/: gamestate.proto  inputs.proto  protocol.proto
backend/src/: main.rs  protocol.rs  service.rs
backend/src/game/: engine.rs  state.rs
backend/src/game/engine/: engine.rs  move_engine.rs  move_inputs.rs
backend/src/roborally/engine/: engine.rs  execution_engine.rs  game_engine.rs  mod.rs  move_engine.rs  move_inputs.rs  player_input.rs  register_engine.rs  round_engine.rs
backend/src/roborally/state/: board.rs  board_parser.rs  cards.rs  game_state.rs  mod.rs  player.rs  state.rs
backend/ts-client/: generate-proto.sh  package.json
frontend/: .eslintrc.json  gatsby-config.js  gatsby-node.js  package.json
frontend/src/components/: move-card-debug-input.tsx  program-sheet.tsx
frontend/src/components/board/: babylon-board-renderer.ts  board-view.tsx  board.tsx  melonjs-board-renderer.ts  phaser-board-renderer.ts  phaser-game-board.ts
frontend/src/pages/: index.tsx
protocol/: gamestate.proto
proxy/: Cargo.toml
proxy/src/: discovery.rs  kubernetes.rs  lib.rs  main.rs  protocol.rs  proxy.rs  util.rs
