[package]
name = "backend"
version = "0.1.0"
authors = ["Gero Posmyk-Leinemann <gero.posmyk-leinemann@typefox.io>"]
edition = "2018"

[dependencies]
tonic = { version = "0.4.2" }
bytes = "1.0.1"
prost = "0.7.0"
rand = "0.8.3"

derive_builder = "0.10.0"
failure = "0.1.8"

tokio = { version = "1.16.1", features = ["rt-multi-thread"] }
futures-preview = { version = "0.3.0-alpha.19", default-features = false, features = ["alloc"] }
async-stream = "0.3.0"
http = "0.2.4"
tower = "0.4.6"

[build-dependencies]
tonic-build = "0.4.2"
